--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@progress/kendo-react-pdf": "^5.13.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
